--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=kinms
+application.vendor=zhuangjianjia
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,12 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/kinms.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.kinms-src=src
 file.reference.local_policy.jar=lib/local_policy.jar
 file.reference.log4j-1.2.16.jar=lib/log4j-1.2.16.jar
-file.reference.mina-core-1.1.6.jar=lib/mina-core-1.1.6.jar
+file.reference.mina-core-1.1.6.jar=lib\\mina-core-1.1.6.jar
 file.reference.mysql-connector-java-bin.jar=lib/mysql-connector-java-bin.jar
 file.reference.slf4j-api.jar=lib/slf4j-api.jar
 file.reference.slf4j-jdk14.jar=lib/slf4j-jdk14.jar
@@ -40,11 +42,11 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.local_policy.jar}:\
     ${file.reference.log4j-1.2.16.jar}:\
-    ${file.reference.mina-core-1.1.6.jar}:\
     ${file.reference.mysql-connector-java-bin.jar}:\
     ${file.reference.slf4j-api.jar}:\
     ${file.reference.slf4j-jdk14.jar}:\
-    ${file.reference.US_export_policy.jar}
+    ${file.reference.US_export_policy.jar}:\
+    ${file.reference.mina-core-1.1.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
